--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -26,8 +26,8 @@ spec:
           requests:
             cpu: "250m"
             memory: "256Mi"
-#      imagePullSecrets:
-#      - name: myregistrykey
+      imagePullSecrets:
+      - name: myregistrykey
 ---
 apiVersion: v1
 kind: Service
